Checkin: code Refactor by findBugs tool